--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </p>
             <p id="punto">Sumaste un punto</p>
         </div>
-        <button class="button disabled" id="reiniciar-juego">Reiniciar Juego</button>
+        <button class="button disabled" id="reiniciar">Reiniciar Juego</button>
     </main>
     <script src="./js/base.js"></script>
     <script src="./js/main.js"></script>
