--- a/index.html
+++ b/index.html
@@ -4,25 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienvenida del juego</title>
+    <title>Juego</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <div class="caja">
-        <h1 class="titulo">Bienvenido/a al juego Piedra, Papel y Tijera</h1>
-        <p class="parrafo">¡Es muy sencillo de jugar, espero te guste!</p>
 
-        <br>
+    <header>
+        <h1 class="titulo">Piedra, Papel o Tijera</h1>
+        <p class="parrafo">Diviertete mucho!</p>
+    </header>
+    <main>
+        <p class="instrucciones" id="instrucciones">
+            El primero en llegar a 3 puntos gana
+        </p>
+        <div class="marcador">
+            <p class="nombre nombre-jugador">Jugador</p>
+            <p class="nombre nombre-enemigo">Enemigo</p>
+            <p class="puntos">
+                <span id="puntos-jugador">0</span>
+                <span>-</span>
+                <span id="puntos-enemigo">0</span>
+            </p>
+        </div>
 
-        <form class="formulario" id="form-jugador">
-                <label class="input" for="nombre">Ingresa tu nombre:</label>
-                <input type="text" id="nombre" name="nombre">
-                <button class="button" type="submit">Enviar</button>
-        </form>
+        <h2>Elige muy bien tu ataque, para cada turno:</h2>
 
-        <a class="tocar" href="./Paginas/juego.html">Toca aca para empezar a jugar👈</a>
-
-    <script src="./js/base.js"></script>
+        <div class="elige-tu-ataque" id="elige-tu-ataque">
+            <div class="ataques">
+                <img src="./img/Piedra.png" alt="" class="ataque" id="piedra">
+                <img src="./img/Papel.png" alt="" class="ataque" id="papel">
+                <img src="./img/Tijera.png" alt="" class="ataque" id="tijera">
+            </div>
+        </div>
+        <div class="mensaje disabled" id="mensaje">
+            <p>
+                Tu usaste <span class="eleccion" id="eleccion-jugador">papel</span><br>
+                y el enemigo usó <span class="eleccion" id="eleccion-enemigo">papel</span>
+            </p>
+            <p id="gana-punto">¡Ganaste un punto!</p>
+        </div>
+        <button class="button disabled" id="reiniciar">Reiniciar juego</button>
+        <a class="button disabled" id="verMas" href="./juegos.html">Ver mas</a>
+    </main>
+    
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
