--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
     </main>
     
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-    <script src="./js/main.js"></script>
+    <script defer src="./js/main.js"></script>
 </body>
 </html>
