--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header>
         <h1 class="titulo">Piedra, Papel o Tijera</h1>
-        <p class="parrafo">Diviertete mucho!</p>
+        <p class="parrafo">¡Diviertete mucho!</p>
     </header>
     <main>
         <p class="instrucciones" id="instrucciones">
@@ -38,13 +38,13 @@
         </div>
         <div class="mensaje disabled" id="mensaje">
             <p>
-                Tu usaste <span class="eleccion" id="eleccion-jugador">papel</span><br>
+                Tú usaste <span class="eleccion" id="eleccion-jugador">papel</span><br>
                 y el enemigo usó <span class="eleccion" id="eleccion-enemigo">papel</span>
             </p>
             <p id="gana-punto">¡Ganaste un punto!</p>
         </div>
         <button class="button disabled" id="reiniciar">Reiniciar juego</button>
-        <a class="button disabled" id="verMas" href="./juegos.html">Ver mas</a>
+        <a class="button disabled" id="verMas" href="./juegos.html">Ver más</a>
     </main>
     
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
