--- a/juegos.html
+++ b/juegos.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mas juegos</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
         <div class="container-titulo">
-            <h1 class="titulo-juegos"> Mas Juegos:</h1>
-            <p class="parrafo-juegos">Espero que te gustara el Piedra, Papel o Tijera, aca te dejo algunas otras opciones para jugar con amigos/familia:</p>
+            <h1 class="titulo-juegos">Más Juegos:</h1>
+            <p class="parrafo-juegos">Espero que te gustara el juego de Piedra, Papel o Tijera, acá te dejo algunas otras opciones para jugar con amigos/familia:</p>
         </div>
 
         <div class="container-datos">
             <h2 class="titulo-juegosD">Para pasar el rato o divertirte:</h2>
             <br>
             <div id="datos"></div>
-            <button class="button" id="buttonDatos">Toca aca</button>
+            <button class="button" id="buttonDatos">Toca acá</button>
         </div>
 
         <script src="../js/datos.js"></script>
