--- a/juegos.html
+++ b/juegos.html
@@ -10,7 +10,7 @@
 <body>
         <div class="container-titulo">
             <h1 class="titulo-juegos">Más Juegos:</h1>
-            <p class="parrafo-juegos">Espero que te gustara el juego de Piedra, Papel o Tijera, acá te dejo algunas otras opciones para jugar con amigos/familia:</p>
+            <p class="parrafo-juegos">Espero que te gustara el juego de Piedra, Papel o Tijera, acá te dejo algunas opciones para jugar con amigos/familia:</p>
         </div>
 
         <div class="container-datos">
